# portal-cpp-opengl

./: .gitignore  Application.cpp  Application.h  BuiltInShaders.h  CMakeLists.txt  Camera.cpp  Camera.h  DebugRenderer.h  DynamicBox.cpp  DynamicBox.h  LICENSE  LevelConstants.h  LevelController.cpp  LevelController.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Portal.cpp  Portal.h  Portalable.h  README.md  Renderer.cpp  Renderer.h  ScenePrimitives.cpp  ScenePrimitives.h  Utility.cpp  Utility.h  main.cpp  portalcpp.sln  portalcpp.vcxproj  portalcpp.vcxproj.filters  stb_image.h
resources/levels/: level_intro.json
